# tavily-search

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEV_LOG.md  README.md  TODO.md
.github/workflows/: ci.yml  cross-platform.yml  release.yml  security-audit.yml
src/: api.rs  cli.rs  error.rs  lib.rs  main.rs  output.rs
tests/: api_tests.rs  cli_tests.rs  error_tests.rs  extracted_content_tests.rs  output_tests.rs
