[package]
name = "tavily-search"
version = "0.1.0"
edition = "2021"
description = "CLI application for searching the web using Tavily API"
authors = ["Anthony Scotti <anthony.m.scotti@gmail.com>"]
rust-version = "1.81.0"  # Minimum supported Rust version

[dependencies]
tavily = "2.0.3"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
# Include for static OpenSSL linking when needed
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[features]
default = []
vendored-openssl = ["openssl"]
